overflow fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 *{
     font-family: Roboto;
-    overflow:hidden
+    overflow-x:hidden
 }
 .custom-bg{
     background-color: rgb(156, 154, 154);
